# python-youdao-ai

./: .gitignore  README.md  pyproject.toml  setup.py
src/youdaoai/: __init__.py  _utils.py  asr.py  base.py  client.py  ocr_general.py  ocr_id_card.py  ocr_namecard.py  ocr_receipt.py  ocr_table.py  ocr_translation.py  speech_translation.py  translation.py  tts.py  types.py
tests/: test-table2.xlsx  test_asr.py  test_async_translation.py  test_error.py  test_ocr_general.py  test_ocr_translation.py  test_speech_translation.py  test_table.py  test_translation.py  test_tts.py
youdaoai/: __init__.py  asr.py  base.py  ocr_general.py  ocr_namecard.py  ocr_translation.py  speech_translation.py  translation.py
